Test for coq-community/docker-coq-action#48

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       OPAMJOBS: 2
       OPAMVERBOSE: 1
       OPAMYES: true
+      OPAMWITHTEST: true
       TERM: xterm
     steps:
     - checkout
